# testforge

./: .claudeignore  .gitignore  CLAUDE.md  README.md  audit.md  pyproject.toml  testforge.yml.example
.github/workflows/: ci.yml  testforge-pr.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnalysisPanel.tsx  ChatPanel.tsx  ExecutePanel.tsx  GapsPanel.tsx  GeneratePanel.tsx  Layout.tsx  MutationPanel.tsx  RepairPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StrategyPanel.tsx  Toast.tsx  ValidatePanel.tsx
frontend/src/hooks/: useAnalysis.ts  useChat.ts  useSeedData.ts  useSession.ts  useStrategy.ts
src/testforge/: __init__.py
src/testforge/application/: commands.py  dtos.py  orchestrator.py  queries.py
src/testforge/domain/: entities.py  errors.py  events.py  ports.py  (+2 more)
tests/: test_agent.py  test_cli.py  test_config_layers.py
tests/application/: test_commands.py  test_dtos_and_queries.py  test_orchestrator.py
tests/domain/: test_entities.py  test_errors.py  test_services.py  test_services_prd.py  test_value_objects.py
tests/infrastructure/: test_claude_adapter.py  test_config.py  test_container.py  test_deduplicator.py  test_diff_detector.py  test_filesystem.py  test_fixture_inferrer.py  test_gap_analyser.py  test_generators.py  test_jest_generator.py  test_multi_scanner.py  test_mutation_runner.py  test_plugin_manager.py  test_python_scanner.py  test_test_repairer.py  test_test_runner.py  test_typescript_scanner.py  test_validators.py
(+47 files in other folders)
